<?xml version="1.0"?>

<package format="2">
  <name>xpp_m545</name>
  <version>1.0.9</version>
  <description>
    m545 description for visualization in xpp
  </description>
  
  <author>Edo Jelavic</author>
  <maintainer email="ej@gmail.com">Edo Jelavic</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>xpp_vis</depend>
  <depend>m545_description_ros</depend>
</package>
